# -

spatial-audio-wired-earphones-demo/: CMakeLists.txt  LICENSE  README.md  requirements.txt  spatial_audio_demo.py  web_server.py
spatial-audio-wired-earphones-demo/assets/config/: demo_positions.json
spatial-audio-wired-earphones-demo/include/: AudioDevice.h  DemoConfig.h  SpatialDemo.h
spatial-audio-wired-earphones-demo/scripts/: build.sh  generate_audio.py  run_demo.sh  run_macos.sh  run_web_macos.sh  setup_macos.sh
spatial-audio-wired-earphones-demo/src/: AudioDevice.cpp  DemoConfig.cpp  SpatialDemo.cpp  main.cpp
spatial-audio-wired-earphones-demo/web/: app.js  index.html  styles.css
